# student-job-offer-predictor

./: README.md  main.py  pyproject.toml
API/: prediction.py
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
linear_regression/: Model_train.ipynb
summative/: Model_train.ipynb
summative/model/: reg_model.pkl  scaler.pkl
