[project]
name = "student-job-offer-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.51.0",
]
